# ArxivPaperCurator

./: .gitignore  Dockerfile  compose.yml  pyproject.toml  requirements.txt  test.py
airflow/: Dockerfile  entrypoint.sh  init-db.sql  requirements_airflow.txt
airflow/dags/: arxiv_paper_ingestion.py  hello_world_dag.py
airflow/dags/arxiv_ingestion/: tasks.py
notebooks/: experiments.ipynb  pipelineExperiment.ipynb
src/: config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
src/db/: factory.py
src/db/interface/: base.py  postgresql.py
src/models/: paper.py
src/repositories/: __init__.py  paper.py
src/routers/: ask.py  papers.py  ping.py
src/schemas/: __init__.py  ask.py  health.py
src/schemas/arxiv/: paper.py
src/schemas/pdf_parser/: models.py
src/services/: metadata_extractor.py
src/services/arxiv/: client.py  factory.py
src/services/ollama/: __init__.py  client.py
src/services/pdf_parser/: docling.py  factory.py  parser.py
