[project]
name = "arxivpapercurator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "apache-airflow>=3.1.6",
    "docling>=2.0.0",
    "fastapi>=0.117.1",
    "httpx>=0.27.0",
    "ipykernel>=7.1.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.9,<3.0.0",
    "pydantic-settings>=2.12.0",
    "pypdfium2>=5.4.0",
    "sqlalchemy>=1.4.36,<2.0.0",
    "hf-xet>=1.2.0",
    "ipywidgets>=8.1.8",
    "python-dateutil>=2.8.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
index-strategy = "unsafe-best-match"
